# AutoMetabuilder

./: .gitignore  BACKEND_REORGANIZATION.md  DATA_TO_WORKFLOW_MIGRATION.md  Dockerfile  E2E_SUMMARY.md  E2E_TESTING.md  EVALUATION_SUMMARY.md  FINAL_SUMMARY.md  FINAL_TRANSFORMATION_SUMMARY.md  ISSUE_RESOLUTION.md  Jenkinsfile  MIGRATION.md  MIGRATION_SUMMARY.md  PACKAGE_JSON_GUIDE.md  PROMPT.md  README.md  README_EVALUATION.md  REORGANIZATION_SUMMARY.md  ROADMAP.md  WEB_FOLDER_REMOVAL.md  WEB_MODULE_ANALYSIS.md  WEB_PLUGIN_MIGRATION.md  WORKFLOW_ARCHITECTURE.md  docker-compose.yml  env_example  main.py  prompt.yml  pyproject.toml
backend/: Dockerfile  prompt.yml  pyproject.toml
backend/autometabuilder/: __init__.py  app_runner.py  cli_args.py  context_loader.py  github_integration.py  github_service.py  messages_es.json  messages_nl.json  messages_pirate.json  metadata.json  metadata_loader.py  roadmap_utils.py  tool_map_builder.py  tool_policies.json  tool_registry.json  tools_loader.py  utils.py  workflow_context_builder.py  workflow_engine_builder.py
backend/autometabuilder/data/: __init__.py  json_utils.py  logs.py  messages_io.py  metadata.py  navigation.py  package_loader.py  paths.py  prompt.py  run_state.py  server.py  translations.py  workflow_graph.py
backend/autometabuilder/engine/: __init__.py  workflow_context_builder.py  workflow_engine_builder.py
backend/autometabuilder/integrations/: notifications.py
backend/autometabuilder/loaders/: __init__.py  callable_loader.py  env_loader.py  tool_registry_loader.py
backend/autometabuilder/metadata/: settings_descriptions.json  suggestions.json
backend/autometabuilder/plugins/: hello.py
backend/tests/: README.md  conftest.py  test_ajax_contracts.py  test_backend_e2e.py  test_main.py  test_metadata.py  test_n8n_schema.py  test_roadmap.py  test_trigger_execution.py  test_unit_testing_plugins.py  test_web_plugins.py  test_workflow_graph.py  test_workflow_plugins.py  test_workflow_validation.py
(+709 files in other folders)
